<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open62541pp_vendor</name>
  <version>0.0.0</version>
  <description>Vendor package for open62541pp, a C++ wrapper for open62541 OPC UA library.</description>
  <maintainer email="nikola.banovic@b-robotized.com">nibanovic</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
